# mdnote

./: .gitignore
client/: README.md  package.json  pnpm-lock.yaml
client/src/assets/: main.css
client/src/router/: index.ts
client/src/views/: Editor.vue  Home.vue  Login.vue
server/: README.md  auth.py  databases.py  filesystem.py  main.py  models.py  pyproject.toml  schemas.py
server/routers/: notes.py
